create an empty shop config when a shop is created
